--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="false"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme.NoActionBar">
         <activity
             android:name=".ui.StartActivity"
             android:configChanges="orientation|keyboardHidden"
@@ -31,6 +31,7 @@
                     android:scheme="http" />
             </intent-filter>
         </activity>
+        <activity android:name=".ui.RecipeListActivity" />
     </application>
 
 </manifest>
