--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,5 +32,6 @@ dependencies {
     compile 'com.android.support:support-vector-drawable:25.1.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-beta4'
     compile 'com.android.support:cardview-v7:25.1.0'
+    compile 'com.android.support:percent:25.1.0'
     testCompile 'junit:junit:4.12'
 }
