--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:supportsRtl="false"
         android:theme="@style/AppTheme.NoActionBar">
         <activity
-            android:name=".ui.StartActivity"
+            android:name=".ui.activity.StartActivity"
             android:configChanges="orientation|keyboardHidden"
             android:label="@string/app_name"
             android:noHistory="true"
@@ -31,7 +31,8 @@
                     android:scheme="http" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.RecipeListActivity" />
+        <activity android:name=".ui.activity.RecipeListActivity" />
+        <activity android:name=".ui.activity.RecipeActivity" />
     </application>
 
 </manifest>
