--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,9 +34,7 @@
         <activity android:name=".ui.activity.RecipeListActivity" />
         <activity
             android:name=".ui.activity.RecipeDetailActivity"
-            android:label="@string/title_activity_recipe_detail"
-            android:parentActivityName=".ui.activity.RecipeListActivity"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:parentActivityName=".ui.activity.RecipeListActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.alsash.reciper.ui.activity.RecipeListActivity" />
