--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,11 +7,10 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="false"
-        android:theme="@style/AppTheme.NoActionBar">
+        android:theme="@style/AppTheme">
         <activity
             android:name=".ui.activity.StartActivity"
             android:configChanges="orientation|keyboardHidden"
-            android:label="@string/app_name"
             android:noHistory="true"
             android:theme="@style/StartTheme">
             <intent-filter>
