--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,6 @@ dependencies {
     compile 'com.android.support:support-vector-drawable:25.2.0'
     compile 'com.android.support:cardview-v7:25.2.0'
     compile 'com.android.support:percent:25.2.0'
-    compile 'com.android.support.constraint:constraint-layout:1.0.0-beta5'
+    compile 'com.android.support.constraint:constraint-layout:1.0.0'
     compile 'de.hdodenhof:circleimageview:2.1.0'
 }
