--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,5 @@ dependencies {
     compile 'com.android.support:percent:25.2.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.0'
     compile 'de.hdodenhof:circleimageview:2.1.0'
+    compile 'com.github.PhilJay:MPAndroidChart:v3.0.1'
 }
