--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,10 @@ android {
     }
 }
 
+repositories {
+    maven { url "https://jitpack.io" } // For CircleImageView
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
@@ -35,5 +39,4 @@ dependencies {
     compile 'com.android.support:percent:25.2.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.0'
     compile 'de.hdodenhof:circleimageview:2.1.0'
-    compile 'com.github.philjay:mpandroidchart:v3.0.1'
 }
