--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,5 @@ dependencies {
     compile 'com.android.support:percent:25.2.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.0'
     compile 'de.hdodenhof:circleimageview:2.1.0'
+    compile 'devlight.io:arcprogressstackview:1.0.4'
 }
