--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,10 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.alsash.reciper.ui.activity.RecipeListActivity" />
         </activity>
+        <activity
+            android:name=".ui.activity.RecipeTabActivity"
+            android:label="@string/title_activity_recipe_tab"
+            android:theme="@style/AppTheme"></activity>
     </application>
 
 </manifest>
