--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,13 +3,14 @@
     package="com.alsash.reciper">
 
     <application
+        android:name=".ui.application.ReciperApp"
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="false"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".view.activity.StartActivity"
+            android:name=".ui.activity.StartActivity"
             android:configChanges="orientation|keyboardHidden"
             android:noHistory="true"
             android:theme="@style/StartTheme">
@@ -30,10 +31,10 @@
                     android:scheme="http" />
             </intent-filter>
         </activity>
-        <activity android:name=".view.activity.RecipeTabCatActivity" />
-        <activity android:name=".view.activity.RecipeTabFavActivity" />
-        <activity android:name=".view.activity.RecipeListActivity" />
-        <activity android:name=".view.activity.RecipeDetailActivity" />
+        <activity android:name=".ui.activity.RecipeTabCatActivity" />
+        <activity android:name=".ui.activity.RecipeTabFavActivity" />
+        <activity android:name=".ui.activity.RecipeListActivity" />
+        <activity android:name=".ui.activity.RecipeDetailActivity" />
     </application>
 
 </manifest>
