--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,7 +22,9 @@ android {
 }
 
 repositories {
-    maven { url "https://jitpack.io" } // For CircleImageView
+    maven {
+        url "https://jitpack.io" // For CircleImageView
+    }
 }
 
 greendao {
@@ -43,6 +45,7 @@ dependencies {
     compile 'com.android.support:cardview-v7:25.3.1'
     compile 'com.android.support:percent:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.google.code.gson:gson:2.8.0'
     compile 'org.greenrobot:greendao:3.2.0'
     compile 'com.hannesdorfmann.mosby3:mvp:3.0.2'
     compile 'de.hdodenhof:circleimageview:2.1.0'
