--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,8 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.google.code.gson:gson:2.8.0'
     compile 'org.greenrobot:greendao:3.2.0'
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    compile 'io.reactivex.rxjava2:rxjava:2.0.1'
     compile 'com.hannesdorfmann.mosby3:mvp:3.0.2'
     compile 'de.hdodenhof:circleimageview:2.1.0'
 }
