--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,12 @@ greendao {
 }
 
 dependencies {
-    // App
+    // Test frameworks
+    testCompile 'junit:junit:4.12'
+    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
+    // Android view libraries
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support:support-v4:25.3.1'
@@ -41,19 +46,18 @@ dependencies {
     compile 'com.android.support:cardview-v7:25.3.1'
     compile 'com.android.support:percent:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.google.code.gson:gson:2.8.0'
-    compile 'org.greenrobot:greendao:3.2.0'
+    // Third party view libraries
+    compile 'de.hdodenhof:circleimageview:2.1.0'
+    // RxJava
     compile 'io.reactivex:rxandroid:1.2.1'
     compile 'io.reactivex:rxjava:1.2.10'
-    compile 'de.hdodenhof:circleimageview:2.1.0'
-    compile 'com.facebook.stetho:stetho:1.5.0' // For debugging
-    compile 'com.google.dagger:dagger-android:2.10' // Dagger 2 for Android. Stable version
-    compile 'com.google.dagger:dagger-android-support:2.10'
-    annotationProcessor 'com.google.dagger:dagger-android-processor:2.10'
-    // Test frameworks
-    testCompile 'junit:junit:4.12'
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-    androidTestCompile 'com.google.code.findbugs:jsr305:3.0.1' // For resolving Dagger 2 conflicts
+    // Dagger 2
+    compile 'com.google.dagger:dagger:2.10'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.10'
+    // Json api
+    compile 'com.google.code.gson:gson:2.8.0'
+    // Database api
+    compile 'org.greenrobot:greendao:3.2.0'
+    // Debugging api
+    compile 'com.facebook.stetho:stetho:1.5.0'
 }
