--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'org.greenrobot.greendao'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    buildToolsVersion "25.0.3"
     defaultConfig {
         applicationId "com.alsash.reciper"
         minSdkVersion 16
@@ -32,13 +32,11 @@ greendao {
 }
 
 dependencies {
-    // Test frameworks
-    testCompile 'junit:junit:4.12'
+    testCompile 'junit:junit:4.12'                                      // Test frameworks
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    // Android view libraries
-    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.android.support:appcompat-v7:25.3.1'                   // Android libraries
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support:support-v4:25.3.1'
     compile 'com.android.support:recyclerview-v7:25.3.1'
@@ -46,18 +44,12 @@ dependencies {
     compile 'com.android.support:cardview-v7:25.3.1'
     compile 'com.android.support:percent:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    // Third party view libraries
-    compile 'de.hdodenhof:circleimageview:2.1.0'
-    // RxJava
-    compile 'io.reactivex:rxandroid:1.2.1'
+    compile 'de.hdodenhof:circleimageview:2.1.0'                        // Third party views
+    compile 'io.reactivex:rxandroid:1.2.1'                              // RxJava
     compile 'io.reactivex:rxjava:1.2.10'
-    // Dagger 2
-    compile 'com.google.dagger:dagger:2.10'
+    compile 'com.google.dagger:dagger:2.10'                             // Dagger 2
     annotationProcessor 'com.google.dagger:dagger-compiler:2.10'
-    // Json api
-    compile 'com.google.code.gson:gson:2.8.0'
-    // Database api
-    compile 'org.greenrobot:greendao:3.2.0'
-    // Debugging api
-    compile 'com.facebook.stetho:stetho:1.5.0'
+    compile 'com.google.code.gson:gson:2.8.0'                           // Json
+    compile 'org.greenrobot:greendao:3.2.0'                             // Database
+    compile 'com.facebook.stetho:stetho:1.5.0'                          // Debug
 }
