--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,11 +45,11 @@ dependencies {
     compile 'com.android.support:percent:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'de.hdodenhof:circleimageview:2.1.0'                        // Third party views
-    compile 'io.reactivex:rxandroid:1.2.1'                              // RxJava
-    compile 'io.reactivex:rxjava:1.2.10'
+    compile 'io.reactivex.rxjava2:rxjava:2.1.0'                         // RxJava 2
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'                      // RxAndroid 2
     compile 'com.google.dagger:dagger:2.10'                             // Dagger 2
     annotationProcessor 'com.google.dagger:dagger-compiler:2.10'
     compile 'com.google.code.gson:gson:2.8.0'                           // Json
-    compile 'org.greenrobot:greendao:3.2.0'                             // Database
+    compile 'org.greenrobot:greendao:3.2.0'                             // Database ORM
     compile 'com.facebook.stetho:stetho:1.5.0'                          // Debug
 }
