--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     compile 'io.reactivex.rxjava2:rxjava:2.1.0'                         // RxJava 2
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'                      // RxAndroid 2
     compile 'com.google.dagger:dagger:2.10'                             // Dagger 2
+    compile 'com.github.bumptech.glide:glide:3.8.0'                     // Glide
     annotationProcessor 'com.google.dagger:dagger-compiler:2.10'
     compile 'com.google.code.gson:gson:2.8.0'                           // Json
     compile 'org.greenrobot:greendao:3.2.0'                             // Database ORM
