--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,7 +44,7 @@ dependencies {
     compile 'com.google.dagger:dagger:2.10'                             // Dagger 2
     compile 'com.github.bumptech.glide:glide:3.8.0'                     // Glide
     annotationProcessor 'com.google.dagger:dagger-compiler:2.10'
-    compile 'com.google.code.gson:gson:2.8.0'                           // Json
-    compile 'org.greenrobot:greendao:3.2.0'                             // Database ORM
+    compile 'com.google.code.gson:gson:2.8.0'                           // Gson
+    compile 'org.greenrobot:greendao:3.2.0'                             // GreenDao
     compile 'com.facebook.stetho:stetho:1.5.0'                          // Debug
 }
