--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,12 +39,16 @@ dependencies {
     compile 'com.android.support:percent:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'de.hdodenhof:circleimageview:2.1.0'                        // Third party views
-    compile 'io.reactivex.rxjava2:rxjava:2.1.0'                         // RxJava 2
-    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'                      // RxAndroid 2
-    compile 'com.google.dagger:dagger:2.10'                             // Dagger 2
-    compile 'com.github.bumptech.glide:glide:3.8.0'                     // Glide
+    compile 'com.google.dagger:dagger:2.10'                             // Dagger (2.11 - still rc)
     annotationProcessor 'com.google.dagger:dagger-compiler:2.10'
+    compile 'io.reactivex.rxjava2:rxjava:2.1.0'                         // RxJava
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'                      // RxAndroid
     compile 'com.google.code.gson:gson:2.8.0'                           // Gson
+    compile 'com.squareup.retrofit2:retrofit:2.3.0'                     // Retrofit
+    compile 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
+    compile 'com.squareup.okhttp3:okhttp:3.8.0'                         // OkHttp
     compile 'org.greenrobot:greendao:3.2.2'                             // GreenDao
+    compile 'com.github.bumptech.glide:glide:3.8.0'                     // Glide
     compile 'com.facebook.stetho:stetho:1.5.0'                          // Debug
 }
