--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     compile 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
     compile 'com.squareup.retrofit2:converter-gson:2.3.0'
     compile 'com.squareup.okhttp3:okhttp:3.8.0'                         // OkHttp
+    compile 'com.squareup.okhttp3:logging-interceptor:3.8.0'
     compile 'org.greenrobot:greendao:3.2.2'                             // GreenDao
     compile 'com.github.bumptech.glide:glide:3.8.0'                     // Glide
     compile 'com.facebook.stetho:stetho:1.5.0'                          // Debug
