--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,11 +29,10 @@ greendao {
 }
 
 dependencies {
-    testCompile 'junit:junit:4.12'                                      // Test frameworks
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.3.1'                   // Android libraries
+    compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support:support-v4:25.3.1'
     compile 'com.android.support:recyclerview-v7:25.3.1'
@@ -41,18 +40,19 @@ dependencies {
     compile 'com.android.support:cardview-v7:25.3.1'
     compile 'com.android.support:percent:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'de.hdodenhof:circleimageview:2.1.0'                        // Third party views
-    compile 'com.google.dagger:dagger:2.10'                             // Dagger (2.11 - still rc)
-    annotationProcessor 'com.google.dagger:dagger-compiler:2.10'
-    compile 'io.reactivex.rxjava2:rxjava:2.1.0'                         // RxJava
-    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'                      // RxAndroid
-    compile 'com.google.code.gson:gson:2.8.0'                           // Gson
-    compile 'com.squareup.retrofit2:retrofit:2.3.0'                     // Retrofit
+    compile 'de.hdodenhof:circleimageview:2.1.0'
+    compile 'com.google.dagger:dagger:2.10'
+    compile 'io.reactivex.rxjava2:rxjava:2.1.0'
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    compile 'com.google.code.gson:gson:2.8.0'
+    compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
     compile 'com.squareup.retrofit2:converter-gson:2.3.0'
-    compile 'com.squareup.okhttp3:okhttp:3.8.0'                         // OkHttp
+    compile 'com.squareup.okhttp3:okhttp:3.8.0'
     compile 'com.squareup.okhttp3:logging-interceptor:3.8.0'
-    compile 'org.greenrobot:greendao:3.2.2'                             // GreenDao
-    compile 'com.github.bumptech.glide:glide:3.8.0'                     // Glide
-    compile 'com.facebook.stetho:stetho:1.5.0'                          // Debug
+    compile 'org.greenrobot:greendao:3.2.2'
+    compile 'com.github.bumptech.glide:glide:3.8.0'
+    compile 'com.facebook.stetho:stetho:1.5.0'
+    testCompile 'junit:junit:4.12'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.10'
 }
