--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,7 +45,7 @@
             android:name=".ui.activity.RecipeCollectionsActivity"
             android:launchMode="singleTop" />
         <activity
-            android:name=".ui.activity.RecipeDetailActivity"
+            android:name=".ui.activity.RecipeDetailsActivity"
             android:launchMode="singleTop" />
         <activity
             android:name=".ui.activity.SingleFragmentActivity"
