--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,13 +43,15 @@
         </activity>
         <activity
             android:name=".ui.activity.FragmentCollectionActivity"
-            android:launchMode="singleTop" />
+            android:launchMode="singleTop"
+            android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".ui.activity.FragmentSingleActivity"
             android:launchMode="singleTop" />
         <activity
             android:name=".ui.activity.RecipeDetailsActivity"
-            android:launchMode="singleTop" />
+            android:launchMode="singleTop"
+            android:windowSoftInputMode="adjustPan" />
     </application>
 
 </manifest>
